--- a/www/src/index.css
+++ b/www/src/index.css
@@ -1,5 +1,6 @@
 #root {
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .input-field label {
@@ -38,8 +39,12 @@ body {
     font-size: 30px;
 }
 
-.collection-item {
-    font-size: 18px;
+.collection-item label span {
+    /* font-size: 20px !important; */
+    border-top: none !important;
+    border-right: none !important;
+    border-left: none !important;
+    border-radius: 0px !important;
 }
 
 .checkbox-item-checked {
@@ -58,6 +63,7 @@ body {
 .checkButton {
     color: #3949ab;
     cursor: pointer;
+    user-select: none;
 }
 
 .newTaskButton {
@@ -78,14 +84,20 @@ body {
 
 .edit-field {
     margin: 0px !important;
-    height: 22px !important;
+    height: 25px !important;
 }
 
 .update-input {
-    margin: 0px !important;
-    height: 22px !important;
+    margin: 0px 0px 0px 30px !important;
+    height: 25px !important;
     width: 75% !important;
 }
 .checkButton {
     margin-right: 10px;
+}
+
+.row.tasks {
+    height: 45vh;
+    overflow: scroll;
+    overflow-x: hidden;
 }
